license: fix color contrast

--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,7 +1,7 @@
 .footer {
   background: var(--primary-color-8);
   border-top: 0.5rem solid var(--primary-color-9);
-  color: #fff;
+  color: #000;
   font-size: .8rem;
   margin-top: auto;
   padding: 1rem;
